--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>First React App</title>
+    <title>Vite + React</title>
   </head>
   <body>
-    <h1>Christine Bendanillo</h1>
-    <h2>Jay Ann Arnido</h2>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
